--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query-devtools": "^5.17.19",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "clsx": "^2.0.1",
+    "cmdk": "^0.2.0",
+    "date-fns": "^4.1.0",
     "i18next": "^23.7.16",
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-i18next": "^14.0.1",
-    "@tanstack/react-query": "^5.17.19",
-    "@tanstack/react-query-devtools": "^5.17.19",
-    "sonner": "^1.3.1",
     "react-hotkeys-hook": "^4.4.4",
-    "cmdk": "^0.2.0",
-    "clsx": "^2.0.1",
+    "react-i18next": "^14.0.1",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
