--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,28 +21,30 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/schedule": "^4.0.0",
-    "@nestjs/config": "^3.1.1",
     "@prisma/client": "^5.8.0",
-    "pg": "^8.11.3",
     "axios": "^1.6.5",
-    "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
-    "rxjs": "^7.8.1",
-    "reflect-metadata": "^0.1.14"
+    "class-validator": "^0.14.0",
+    "eslint-config-next": "16.1.6",
+    "next": "^16.1.6",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.3.0",
+    "@nestjs/cli": "^11.0.16",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
     "@types/pg": "^8.10.9",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
