feat: Implement initial API structure with audit, query console, backup, and failover modules, and foundational web UI components.

--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -1,2 +1,27 @@
+# ===========================================
+# PostgreSQL Admin Tool - Web Configuration
+# ===========================================
+
+# API Server URL
 NEXT_PUBLIC_API_URL=http://localhost:3001/api
+
+# Server Port
 PORT=3000
+
+# ===========================================
+# Optional: Analytics & Monitoring
+# ===========================================
+
+# Google Analytics
+# NEXT_PUBLIC_GA_ID=
+
+# Sentry for error tracking
+# NEXT_PUBLIC_SENTRY_DSN=
+
+# ===========================================
+# Optional: Feature Flags
+# ===========================================
+
+# Enable/disable features
+# NEXT_PUBLIC_ENABLE_DARK_MODE=true
+# NEXT_PUBLIC_ENABLE_ANALYTICS=false
