--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,28 +20,40 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@nestjs/bullmq": "^10.1.0",
     "@nestjs/common": "^10.3.0",
-    "@nestjs/config": "^1.1.5",
+    "@nestjs/config": "^3.1.0",
     "@nestjs/core": "^10.3.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/schedule": "^4.0.0",
     "@prisma/client": "^5.8.0",
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
+    "bullmq": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "eslint-config-next": "16.1.6",
-    "next": "^16.1.6",
+    "ioredis": "^5.3.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.16",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.10.9",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "eslint": "^9.39.2",
