feat: initialize API project with NestJS setup and Prisma seed data for clusters and instances

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,9 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@nestjs/bullmq": "^10.1.0",
     "@nestjs/common": "^10.3.0",
