--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,18 +19,23 @@
     "date-fns": "^4.1.0",
     "i18next": "^23.7.16",
     "next": "^16.1.6",
+    "prismjs": "^1.30.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hotkeys-hook": "^4.4.4",
     "react-i18next": "^14.0.1",
+    "react-simple-code-editor": "^0.14.1",
+    "react-syntax-highlighter": "^16.1.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.6",
