--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^4.1.0",
     "i18next": "^23.7.16",
+    "lucide-react": "^0.563.0",
     "next": "^16.1.6",
     "prismjs": "^1.30.0",
     "react": "^18",
